# tn-110122061-nguyenleduy-davictory

./: .dockerignore  .env  .env.docker  .env.example  .env.production  .gitignore  ALWAYS_CREATE_VERSION.md  ASSIGNMENT_FEATURE_REPORT.md  ASSIGNMENT_FLOW_DIAGRAM.md  ASSIGNMENT_FLOW_REDESIGN.md  ASSIGNMENT_IMPLEMENTATION_SUMMARY.md  ASSIGNMENT_MODE_COMPLETE.md  BACKEND_BUG_TABLE_COMPLETION.md  BACKEND_IMPLEMENTATION_SUMMARY.md  BAO_CAO_LUU_BAI_THI.md  BAO_CAO_QUAN_LY_LOP_HOC.md  BAO_CAO_TEST.md  CAU_TRUC_DU_AN.md  CHANGELOG_2026-03-13.md  CLEANUP_SUMMARY.md  DATABASE_STRUCTURE.md  DAVictory_core_erd.puml  DAVictory_general_erd.md  DEBUG_ASSIGNMENT_LOADING.md  DEBUG_EXIT_WARNING.md  DEBUG_LINE_HEIGHT.md  DEBUG_VERSIONS_BUTTON.md  DE_CUONG_CHI_TIET.md  DROPDOWN_IMAGE_GUIDE.md  ENHANCEMENT_CLASS_MANAGEMENT.js  EXAM_FILTER_GUIDE.md  EXAM_LOGIC_COMPLETE.md  FINAL_EXIT_WARNING_SUMMARY.md  FIXED_LMS_TEACHER_TESTS.md  FIXED_TRACKING_CHANGES.md  FIX_ASSIGNMENT_NOT_SHOWING.md  FIX_IMAGE_NOTE_FORM_SAVE_LOAD.md  FIX_TITLE_LENGTH_ERROR.md  FIX_TOPLAINTEXT_ERROR.md  FRONTEND_CHECKLIST.md  (+117 more)
ai-agent-python/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
ai-agent-python/agents/: content_agent.py  email_agent.py  info_agent.py  langchain_email_agent.py  langchain_info_agent.py  langchain_report_agent.py  report_agent.py
ai-agent-python/ai_agent_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-agent-python/api/: agent.py  category.py
ai-agent-python/core/: base.py  blog_wizard.py  embedding.py  langchain_agent.py  llm_agent.py  orchestrator.py  registry.py  schema.py  tool_base.py
ai-agent-python/db/: session.py
ai-agent-python/infrastructure/: api_client.py  image_service.py  key_rotator.py  llm_client.py  message_queue.py  progress_tracker.py  report_generator.py  report_templates.py
ai-agent-python/models/: __init__.py  agent.py
ai-agent-python/reports/: report__20260621_194015.md  report_month_20260620_222703.md  report_month_20260620_225155.md  report_month_20260620_225529.md  report_month_20260620_225950.md  report_month_20260620_231134.md  report_month_20260620_231305.md  report_month_20260620_231727.md  report_month_20260620_232109.md  report_month_20260620_232815.md  report_month_20260620_232920.md  report_month_20260620_233024.md  report_month_20260620_233837.md  report_month_20260620_233921.md  report_month_20260620_233955.md  report_month_20260620_234128.md  report_month_20260620_234225.md  report_month_20260620_234426.md  report_month_20260620_235037.md  report_month_20260620_235307.md  report_month_20260620_235713.md  report_month_20260620_235945.md  report_month_20260621_000149.md  report_month_20260621_000307.md  report_month_20260621_000500.md  report_month_20260621_001111.md  report_month_20260621_101836.md  report_month_20260621_102213.md  report_month_20260621_102646.md  report_month_20260621_103332.md  report_month_20260621_103518.md  report_month_20260621_103548.md  report_month_20260621_104137.md  report_month_20260621_104217.md  report_month_20260621_104353.md  report_month_20260621_104852.md  report_month_20260621_105033.md  report_month_20260621_105312.md  report_month_20260621_105351.md  report_month_20260621_111123.md  (+34 more)
ai-import-python/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml
ai-speaking-python/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml
ai-writing-python/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml
(+936 files in other folders)
