[project]
name = "ai-agent-python"
version = "1.0.0"
description = "DAVictory Multi-Agent System - Content writing, info management, reporting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2.0",
    "groq>=0.15.0",
    "openai>=1.50.0",
    "loguru>=0.7",
    "tenacity>=9.0",
    "sse-starlette>=2.0",
    "redis>=5.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_agent_python*", "api*", "core*", "tools*", "infrastructure*", "db*", "models*", "agents*"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
